--- a/PROJET_SOACompositeExporter/pom.xml
+++ b/PROJET_SOACompositeExporter/pom.xml
@@ -16,24 +16,28 @@
   <properties>
     <com.example.metadata_._API_livre_swagger>capp/EnterpriseServiceBus</com.example.metadata_._API_livre_swagger>
     <com.example.dataservice_._livre>capp/DataServicesServer</com.example.dataservice_._livre>
-    <com.example.api_._API_emprunts>capp/EnterpriseServiceBus</com.example.api_._API_emprunts>
+    <com.example.metadata_._API_reservation_swagger>capp/EnterpriseServiceBus</com.example.metadata_._API_reservation_swagger>
     <com.example.metadata_._API_livre_metadata>capp/EnterpriseServiceBus</com.example.metadata_._API_livre_metadata>
-    <com.example.endpoint_._EP_POST_EMPRUNTS>capp/EnterpriseServiceBus</com.example.endpoint_._EP_POST_EMPRUNTS>
     <com.example.metadata_._API_membres_metadata>capp/EnterpriseServiceBus</com.example.metadata_._API_membres_metadata>
-    <com.example.metadata_._API_membres_swagger>capp/EnterpriseServiceBus</com.example.metadata_._API_membres_swagger>
-    <com.example.endpoint_._EP_UPDATE_DISPO>capp/EnterpriseServiceBus</com.example.endpoint_._EP_UPDATE_DISPO>
     <com.example.api_._API_livre>capp/EnterpriseServiceBus</com.example.api_._API_livre>
-    <com.example.api_._API_membres>capp/EnterpriseServiceBus</com.example.api_._API_membres>
-    <com.example.endpoint_._Generer_IDLivre>capp/EnterpriseServiceBus</com.example.endpoint_._Generer_IDLivre>
     <com.example.endpoint_._POST_MEMBRE_EP>capp/EnterpriseServiceBus</com.example.endpoint_._POST_MEMBRE_EP>
-    <com.example.endpoint_._Biblio__livre_swagger>capp/ApplicationServer</com.example.endpoint_._Biblio__livre_swagger>
+    <com.example.api_._API_reservation>capp/EnterpriseServiceBus</com.example.api_._API_reservation>
     <com.example.endpoint_._Livre_EP>capp/EnterpriseServiceBus</com.example.endpoint_._Livre_EP>
-    <com.example.endpoint_._EP_GET_MEMBRES>capp/EnterpriseServiceBus</com.example.endpoint_._EP_GET_MEMBRES>
     <com.example.endpoint_._Livre_POST_EP>capp/EnterpriseServiceBus</com.example.endpoint_._Livre_POST_EP>
-    <com.example.metadata_._API_LIVRE_swagger>capp/EnterpriseServiceBus</com.example.metadata_._API_LIVRE_swagger>
     <com.example.metadata_._API_emprunts_metadata>capp/EnterpriseServiceBus</com.example.metadata_._API_emprunts_metadata>
     <com.example.metadata_._API_emprunts_swagger>capp/EnterpriseServiceBus</com.example.metadata_._API_emprunts_swagger>
+    <com.example.api_._API_emprunts>capp/EnterpriseServiceBus</com.example.api_._API_emprunts>
+    <com.example.endpoint_._EP_POST_EMPRUNTS>capp/EnterpriseServiceBus</com.example.endpoint_._EP_POST_EMPRUNTS>
+    <com.example.metadata_._API_membres_swagger>capp/EnterpriseServiceBus</com.example.metadata_._API_membres_swagger>
+    <com.example.endpoint_._EP_UPDATE_DISPO>capp/EnterpriseServiceBus</com.example.endpoint_._EP_UPDATE_DISPO>
+    <com.example.api_._API_membres>capp/EnterpriseServiceBus</com.example.api_._API_membres>
+    <com.example.endpoint_._Generer_IDLivre>capp/EnterpriseServiceBus</com.example.endpoint_._Generer_IDLivre>
+    <com.example.endpoint_._Biblio__livre_swagger>capp/ApplicationServer</com.example.endpoint_._Biblio__livre_swagger>
+    <com.example.metadata_._API_reservation_metadata>capp/EnterpriseServiceBus</com.example.metadata_._API_reservation_metadata>
+    <com.example.endpoint_._EP_GET_MEMBRES>capp/EnterpriseServiceBus</com.example.endpoint_._EP_GET_MEMBRES>
+    <com.example.metadata_._API_LIVRE_swagger>capp/EnterpriseServiceBus</com.example.metadata_._API_LIVRE_swagger>
     <com.example.metadata_._API_LIVRE_metadata>capp/EnterpriseServiceBus</com.example.metadata_._API_LIVRE_metadata>
+    <com.example.endpoint_._EP_RESA_ADD>capp/EnterpriseServiceBus</com.example.endpoint_._EP_RESA_ADD>
     <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,service/rule=aar,synapse/message-store=xml,event/stream=json,service/meta=xml,datasource/datasource=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,wso2/gadget=dar,synapse/api=xml,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,synapse/metadata=yaml,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
   </properties>
   <dependencies>
@@ -44,16 +48,16 @@
       <type>yaml</type>
     </dependency>
     <dependency>
-      <groupId>com.example.dataservice</groupId>
-      <artifactId>livre</artifactId>
-      <version>1.0.0</version>
-      <type>dbs</type>
-    </dependency>
-    <dependency>
       <groupId>com.example.api</groupId>
       <artifactId>API_emprunts</artifactId>
       <version>1.0.0</version>
       <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.example.metadata</groupId>
+      <artifactId>API_reservation_swagger</artifactId>
+      <version>1.0.0</version>
+      <type>yaml</type>
     </dependency>
     <dependency>
       <groupId>com.example.metadata</groupId>
@@ -110,6 +114,12 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>com.example.api</groupId>
+      <artifactId>API_reservation</artifactId>
+      <version>1.0.0</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>com.example.endpoint</groupId>
       <artifactId>Biblio__livre_swagger</artifactId>
       <version>1.0.0</version>
@@ -120,6 +130,12 @@
       <artifactId>Livre_EP</artifactId>
       <version>1.0.0</version>
       <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.example.metadata</groupId>
+      <artifactId>API_reservation_metadata</artifactId>
+      <version>1.0.0</version>
+      <type>yaml</type>
     </dependency>
     <dependency>
       <groupId>com.example.endpoint</groupId>
@@ -156,6 +172,12 @@
       <artifactId>API_LIVRE_metadata</artifactId>
       <version>1.0.0</version>
       <type>yaml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.example.endpoint</groupId>
+      <artifactId>EP_RESA_ADD</artifactId>
+      <version>1.0.0</version>
+      <type>xml</type>
     </dependency>
   </dependencies>
   <repositories>
